feat(standar): perbaiki field tabel dan sesuaikan dengan revisi

--- a/settingsmenu/standarspmi.html
+++ b/settingsmenu/standarspmi.html
@@ -47,7 +47,7 @@
 
    <link rel="stylesheet" href="../style.css">
    <script src="../js/cihuy.js" type="module"></script>
-   <script src="dokumenspmi.js" type="module"></script>
+   <script src="standarspmi.js" type="module"></script>
    <!-- endinject -->
 
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
@@ -438,7 +438,7 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Table</h4>
+                                 <h4>Data Dokumen Standar</h4>
                                  <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -460,9 +460,7 @@
                                        <th>
                                           <span class="userDatatable-title">no</span>
                                        </th>
-                                       <th>
-                                          <span class="userDatatable-title">File id</span>
-                                       </th>
+                                      
                                        <th>
                                           <span class="userDatatable-title">Periode</span>
                                        </th>
@@ -476,9 +474,7 @@
                                        <th>
                                           <span class="userDatatable-title">Tanggal</span>
                                        </th>
-                                       <th data-type="html" data-name='status'>
-                                          <span class="userDatatable-title">Admin</span>
-                                       </th>
+                                       
                                        <th>
                                           <span class="userDatatable-title float-end">action</span>
                                        </th>
