fix(kebijakanspmi): perbaiki js yang dokumen kebijakan spmi

--- a/settingsmenu/kebijakanspmi.html
+++ b/settingsmenu/kebijakanspmi.html
@@ -47,7 +47,7 @@
 
    <link rel="stylesheet" href="../style.css">
    <script src="../js/cihuy.js" type="module"></script>
-   <script src="timspmi.js" type="module"></script>
+   <script src="kebijakanspmi.js" type="module"></script>
    <!-- endinject -->
 
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
