fix (formupdatekebijakanspmi): perbaiki form update untuk kebijakan spmi ganti field nama dokumen keterangan dan file dokumen

--- a/settingsmenu/kebijakanspmi.html
+++ b/settingsmenu/kebijakanspmi.html
@@ -390,17 +390,17 @@
                                        <form id="myForm" method="post">
                                          
                                           <div class="form-group mb-20">
-                                             <Label for="nama">Nama Lengkap :</Label>
+                                             <Label for="nama">Nama Dokumen :</Label>
                                              <input type="text" class="form-control" id="nama-update" placeholder="Nama Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="Jabatan">Jabatan</Label>
+                                             <Label for="Jabatan">Keterangan</Label>
                                              <input type="text" class="form-control" id="jabatan-update"  placeholder="Jabatan Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="file">Masukkan Gambar  :</Label>
+                                             <Label for="file">File Dokumen:</Label>
                                              <input type="file" class="form-control"id="file-update"  >
 
                                           </div>
