fix(formpostkebijakanspmi): perbbaiki untuk menambahkan dokumen kebijakan spmi

--- a/settingsmenu/kebijakanspmi.html
+++ b/settingsmenu/kebijakanspmi.html
@@ -347,17 +347,17 @@
                                        <form id="myForm" method="post">
                                          
                                           <div class="form-group mb-20">
-                                             <Label for="nama">Nama Lengkap :</Label>
-                                             <input type="text" class="form-control" id="nama" placeholder="Nama Lengkap">
+                                             <Label for="namadokumen">Nama Dokumen :</Label>
+                                             <input type="text" class="form-control" id="namadokumen" placeholder="Nama Dokumen">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="Jabatan">Jabatan</Label>
-                                             <input type="text" class="form-control" id="jabatan" placeholder="Jabatan Lengkap">
+                                             <Label for="Keterangan">Keterangan</Label>
+                                             <input type="text" class="form-control" id="keterangan" placeholder="Keterangan ">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="file">Masukkan Gambar  :</Label>
+                                             <Label for="file">File Dokumen  :</Label>
                                              <input type="file" class="form-control"id="file"  >
 
                                           </div>
@@ -390,13 +390,13 @@
                                        <form id="myForm" method="post">
                                          
                                           <div class="form-group mb-20">
-                                             <Label for="nama">Nama Dokumen :</Label>
-                                             <input type="text" class="form-control" id="nama-update" placeholder="Nama Lengkap">
+                                             <Label for="namadokumen">Nama Dokumen :</Label>
+                                             <input type="text" class="form-control" id="namadokumen-update" placeholder="Nama Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="Jabatan">Keterangan</Label>
-                                             <input type="text" class="form-control" id="jabatan-update"  placeholder="Jabatan Lengkap">
+                                             <Label for="keterangan">Keterangan</Label>
+                                             <input type="text" class="form-control" id="keterangan-update"  placeholder="keterangan Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
