feat(ami):hapus fakultas

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -349,7 +349,7 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form method="POST">
-                                          <div class="form-group mb-20">
+                                          <!-- <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
 
@@ -357,7 +357,7 @@
                                                    <option disabled value="">--Pilih Fakultas--</option>
                                                 </select>
                                              </div>
-                                          </div>
+                                          </div> -->
                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Prodi :</Label>
