feat(prodi): tambahkan program studi unit

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -360,10 +360,10 @@
                                           </div> -->
                                           <div class="form-group mb-20">
                                              <div class="category-member">
-                                                <Label>Prodi :</Label>
+                                                <Label>Program Studi Unit :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="prodi">
-                                                   <option disabled value="JAN">--Pilih Prodi--</option>
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
                                           </div>
