feat(standar): menambahkan standar diami untuk role

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -403,6 +403,15 @@
                                                 </select>
                                              </div>
                                           </div>
+                                          <div class="form-group mb-20">
+                                             <div class="category-member">
+                                                <Label> Standar :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="prodi">
+                                                   <option disabled value="JAN">-- Standar --</option>
+                                                </select>
+                                             </div>
+                                          </div>
                                           
                                           <div class="button-group d-flex pt-25">
 
