--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -53,7 +53,7 @@
 
    <!-- Library GET Sidebar -->
    <script src="../js/cihuy.js" type="module"></script> 
-   <script src="kts.js" type="module"></script>  
+   <script src="indikator.js" type="module"></script>  
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
