fix(indikator): ganti tabel menjadi indikator

--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -407,7 +407,7 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Ketidaksesuaian (KTS)
+                                 <h4>Data Indikator
                                  </h4>
                                  <div class="adv-table-table__button">
                                     <div class="dropdown">
