feat(indikator): ganti field tambah data indikator

--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -343,7 +343,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Ketidaksesuaian (KTS)</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Indikator</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
