--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -352,8 +352,12 @@
                                     <div class="new-member-modal">
                                        <form>
                                           <div class="form-group mb-20">
-                                             <Label>KTS :</Label>
-                                             <input type="text" class="form-control" placeholder="" id="kts">
+                                             <Label>Nama Indikator :</Label>
+                                             <input type="text" class="form-control" placeholder="" id="namaindikator">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Isi Indikator :</Label>
+                                             <textarea type="text" class="form-control" placeholder="" id="isiindikator"></textarea>
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
