feat(audit): perbaiki untuk proses audit

--- a/auditors/pengawasan-audit-add.html
+++ b/auditors/pengawasan-audit-add.html
@@ -430,7 +430,7 @@
                 <div class="card card-default card-md mb-4">
                   <div class="card card-horizontal card-default card-md mb-4">
                     <div class="card-header">
-                      <h6>Kesimpulan Audit</h6>
+                      <h6>Tambah Audit</h6>
                     </div>
                     <div class="card-body py-md-30">
                       <div class="horizontal-form">
