--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -432,6 +432,9 @@
                                        <th>
                                           <span class="userDatatable-title">Perbaikan</span>
                                        </th>
+                                       <th>
+                                          <span class="userDatatable-title">Action</span>
+                                       </th>
                                     </tr>
                                  </thead>
                                  <tbody id="content">
