feat(pengawasanaudit):pengawasan audit detail fix

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -430,7 +430,7 @@
                 <div class="card card-default card-md mb-4">
                   <div class="card card-horizontal card-default card-md mb-4">
                     <div class="card-header">
-                      <h6>Tambah Audit</h6>
+                      <h6>Detail Audit</h6>
                     </div>
                     <div class="card-body py-md-30">
                       <div class="horizontal-form">
@@ -485,7 +485,7 @@
                               <div class="with-icon">
                                 <select
                                   class="form-control ih-medium ip-gray radius-xs b-light"
-                                  id="id_standar"
+                                  id="id_indikator"
                                 >
                                   <option value="ya">Ya</option>
                                   <option value="tidak">Tidak</option>
