feat(auditorlanjut)buat untuk get indikator diaudit

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -411,7 +411,7 @@
                                        <div class="col-sm-9">
                                           <div class="with-icon">
                                              <select class="form-control ih-medium ip-gray radius-xs b-light"
-                                                id="standar" disabled>
+                                                id="id_standar" disabled>
                                                 <option>Butir Standar</option>
                                              </select>
                                           </div>
