feat(audit):ganti perbaikan dan hapus tambah data untuk audit

--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -401,10 +401,10 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <button style="margin: right 20px; margin-bottom: 20px; margin-left: 20px ;" id="addbutton" type="button" class="btn btn-default btn-squared color-primary btn-outline-primary ">
+                              <!-- <button style="margin: right 20px; margin-bottom: 20px; margin-left: 20px ;" id="addbutton" type="button" class="btn btn-default btn-squared color-primary btn-outline-primary ">
                                  
                               Tambah Data
-                              </button>
+                              </button> -->
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
@@ -430,7 +430,7 @@
                                           <span class="userDatatable-title">Target Waktu Perbaikan</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Perbaikan</span>
+                                          <span class="userDatatable-title">Status</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">Action</span>
