feat(standar): get standar pada form ami

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -407,7 +407,7 @@
                                              <div class="category-member">
                                                 <Label> Standar :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="prodi">
+                                                <select class="js-example-basic-single js-states form-control" id="standar">
                                                    <option disabled value="JAN">-- Standar --</option>
                                                 </select>
                                              </div>
