feat(ami) :tambah form data baru

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -358,15 +358,45 @@
                                                 </select>
                                              </div>
                                           </div> -->
-                                          <div class="form-group mb-20">
+                                          <div class="form-group mb-20" id="pilihanFormGroup">
                                              <div class="category-member">
-                                                <Label>Program Studi Unit :</Label>
+                                                <Label>Silahkan Pilih Program Studi / Unit</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="pilihan">
+                                                   <option value="prodi">-- Program Studi --</option>
+                                                   <option value="unit">-- Unit --</option>
+
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20" id="prodiFormGroup">
+                                             <div class="category-member">
+                                                <Label>Program Studi :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="prodi">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
                                           </div>
+                                          <div class="form-group mb-20" id="fakultasFormGroup">
+                                             <div class="category-member">
+                                                <Label>Fakultas :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="fakultas">
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20" id="unitFormGroup">
+                                             <div class="category-member">
+                                                <Label>Unit :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="unit">
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                       
                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Ketua Auditor :</Label>
