feat(amikelompok): tes dan buat url kelompok

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -362,14 +362,14 @@
                                              <div class="category-member">
                                                 <Label>Silahkan Pilih Program Studi / Unit</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="pilihan">
+                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit">
                                                    <option value="prodi">-- Program Studi --</option>
                                                    <option value="unit">-- Unit --</option>
 
                                                 </select>
                                              </div>
                                           </div>
-                                          <div class="form-group mb-20" id="prodiFormGroup">
+                                          <!-- <div class="form-group mb-20" id="prodiFormGroup">
                                              <div class="category-member">
                                                 <Label>Program Studi :</Label>
 
@@ -395,7 +395,7 @@
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
-                                          </div>
+                                          </div> -->
                                        
                                           <div class="form-group mb-20">
                                              <div class="category-member">
