feat(ami):kembalikan untuk prodi dan fakultas form ami

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -358,7 +358,7 @@
                                                 </select>
                                              </div>
                                           </div> -->
-                                          <div class="form-group mb-20" id="pilihanFormGroup">
+                                          <!-- <div class="form-group mb-20" id="pilihanFormGroup">
                                              <div class="category-member">
                                                 <Label>Silahkan Pilih Program Studi / Unit</Label>
 
@@ -368,10 +368,10 @@
 
                                                 </select>
                                              </div>
-                                          </div>
-                                          <!-- <div class="form-group mb-20" id="prodiFormGroup">
+                                          </div> -->
+                                          <div class="form-group mb-20" id="prodiFormGroup">
                                              <div class="category-member">
-                                                <Label>Program Studi :</Label>
+                                                <Label>Program Studi / Unit :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="prodi">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
@@ -387,7 +387,7 @@
                                                 </select>
                                              </div>
                                           </div>
-                                          <div class="form-group mb-20" id="unitFormGroup">
+                                          <!-- <div class="form-group mb-20" id="unitFormGroup">
                                              <div class="category-member">
                                                 <Label>Unit :</Label>
 
