feat(prodi):perbaikan url get prodi unit

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -373,7 +373,7 @@
                                              <div class="category-member">
                                                 <Label>Program Studi / Unit :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="prodi">
+                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
