fix (Prodi): perbaiki fill form get prodi atau unit

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -341,7 +341,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data AMI                                    </h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data AMI</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -469,21 +469,21 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form method="POST">
-                                          <div class="form-group mb-20">
+                                          <div class="form-group mb-20" id="prodiFormGroup">
+                                             <div class="category-member">
+                                                <Label>Program Studi / Unit :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit-update">
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20" id="fakultasFormGroup">
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="fakultas-update">
-                                                   <option disabled value="">--Pilih Fakultas--</option>
-                                                </select>
-                                             </div>
-                                          </div>
-                                          <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <Label>Prodi :</Label>
-
-                                                <select class="js-example-basic-single js-states form-control" id="prodi-update">
-                                                   <option disabled value="JAN">--Pilih Prodi--</option>
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
                                           </div>
