fix(fakultas): bug untuk foto di fakultas users

--- a/users/users-fakultas.html
+++ b/users/users-fakultas.html
@@ -466,7 +466,7 @@
                                            </div>
                                           <div class="form-group mb-20">
                                              <Label>Foto :</Label>
-                                             <input type="file" id="fotoInput" class="form-control" placeholder="foto">
+                                             <input type="file" id="fotoInput-update" class="form-control" placeholder="foto">
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
