feat(datafakultas): memperbaiki untuk fix bug update unit maupun fakultas

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -369,20 +369,21 @@
                                                 </select>
                                              </div>
                                           </div> -->
-                                          <div class="form-group mb-20" id="prodiFormGroup">
+                                         
+                                          <div class="form-group mb-20" id="fakultasFormGroup">
                                              <div class="category-member">
-                                                <Label>Program Studi / Unit :</Label>
+                                                <Label>Fakultas / Unit :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit">
+                                                <select class="js-example-basic-single js-states form-control" id="fakultas">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
                                           </div>
-                                          <div class="form-group mb-20" id="fakultasFormGroup">
+                                          <div class="form-group mb-20" id="prodiFormGroup">
                                              <div class="category-member">
-                                                <Label>Fakultas :</Label>
+                                                <Label>Program Studi / Bagian :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="fakultas">
+                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
@@ -469,24 +470,25 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form method="POST">
-                                          <div class="form-group mb-20" id="prodiFormGroup">
-                                             <div class="category-member">
-                                                <Label>Program Studi / Unit :</Label>
-
-                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit-update">
-                                                   <option disabled value="JAN">--Program Studi Unit--</option>
-                                                </select>
-                                             </div>
-                                          </div>
                                           <div class="form-group mb-20" id="fakultasFormGroup">
                                              <div class="category-member">
-                                                <Label>Fakultas :</Label>
+                                                <Label>Fakultas / Unit :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" id="fakultas-update">
                                                    <option disabled value="JAN">--Program Studi Unit--</option>
                                                 </select>
                                              </div>
                                           </div>
+                                          <div class="form-group mb-20" id="prodiFormGroup">
+                                             <div class="category-member">
+                                                <Label>Program Studi / Bagian :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="prodiatauunit-update">
+                                                   <option disabled value="JAN">--Program Studi Unit--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                         
                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Ketua Auditor :</Label>
