fix(prodiunit:)perbaiki get untuk prodi unit di tabel

--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -562,16 +562,16 @@
                                           <span class="userDatatable-title">No</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">idFakultas</span>
+                                          <span class="userDatatable-title">Fakultas  </span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Prodi</span>
+                                          <span class="userDatatable-title">Program Studi / Unit</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">Jenjang</span>
                                        </th>
                                        <th data-type="html" data-name='position'>
-                                          <span class="userDatatable-title">Kaprodi</span>
+                                          <span class="userDatatable-title">Kaprodi / Direktur</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">NIDN</span>
