Update modal titles in standar.html and users-prodi.html

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -399,7 +399,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Standar</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update Data Standar</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
