fix(prosesaudit):hidupkan dropdown pada audit tambah

--- a/auditors/pengawasan-audit-tambah.html
+++ b/auditors/pengawasan-audit-tambah.html
@@ -395,7 +395,7 @@
 
                         <div class="card card-horizontal card-default card-md mb-4">
                            <div class="card-header">
-                              <h6> Audit Detail
+                              <h6> Audit Tambah 
                               </h6>
                            </div>
                            <div class="card-body py-md-30">
@@ -411,7 +411,7 @@
                                        <div class="col-sm-9">
                                           <div class="with-icon">
                                              <select class="form-control ih-medium ip-gray radius-xs b-light"
-                                                id="id_standar" disabled>
+                                                id="id_standar" >
                                                 <option>Butir Standar</option>
                                              </select>
                                           </div>
@@ -425,7 +425,7 @@
                                        <div class="col-sm-9">
                                           <div class="with-icon">
                                              <select class="form-control ih-medium ip-gray radius-xs b-light"
-                                                id="indikator" disabled>
+                                                id="indikator" >
                                                 <option aria-readonly="false">Pertanyaan indikator</option>
                                              </select>
                                           </div>
