feat(pengauditan):test membuat post untuk pengauditan

--- a/auditors/pengawasan-audit-tambah.html
+++ b/auditors/pengawasan-audit-tambah.html
@@ -508,10 +508,10 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <button type="button" id="simpanButton"
+                                    <button type="button" id="buttoninsert"
                                        style="margin-right:20px; margin-top: 12px;  margin-bottom: 12px;"
                                        class="btn btn-default btn-squared color-primary btn-outline-primary ">
-                                       Simpan
+                                       Simpan Data
                                     </button>
 
                                  </form>
