--- a/auditors/pengawasan-audit-tambah.html
+++ b/auditors/pengawasan-audit-tambah.html
@@ -488,7 +488,7 @@
                                        <div class="col-sm-9">
                                           <div class="with-icon">
                                              <textarea name="uraian"
-                                                class="form-control ih-medium ip-gray radius-xs b-light" id="uraian"
+                                                class="form-control ih-medium ip-gray radius-xs b-light" id="tindakPerbaikan"
                                                 style="width: 100%; height: 200px"></textarea>
                                           </div>
                                        </div>
